snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.095327-2.module.sha1
1316f075adb91d56df200d1caa958862dcd55a79